--- a/OpenGL_Practice/shader_practice/shader_practice.vcxproj
+++ b/OpenGL_Practice/shader_practice/shader_practice.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="glad.c" />
     <ClCompile Include="modules\Advanced_OpenGL\module_1_depth_testing\module_1_depth_testing.cpp" />
     <ClCompile Include="modules\Advanced_OpenGL\module_2_stencil_testing\module_2_stencil_testing.cpp" />
+    <ClCompile Include="modules\Advanced_OpenGL\module_3_blending\module_3_blending.cpp" />
     <ClCompile Include="modules\Getting_Started\module_1_hello_window\module_1_hello_window.cpp" />
     <ClCompile Include="modules\Getting_Started\module_2_hello_triangle\module_2_hello_triangle.cpp" />
     <ClCompile Include="modules\Getting_Started\module_3_shaders\module_3_shaders.cpp" />
@@ -174,6 +175,9 @@
     <None Include="modules\Advanced_OpenGL\module_2_stencil_testing\shaderSingleColor.frag" />
     <None Include="modules\Advanced_OpenGL\module_2_stencil_testing\stencil_testing_shader.frag" />
     <None Include="modules\Advanced_OpenGL\module_2_stencil_testing\stencil_testing_shader.vert" />
+    <None Include="modules\Advanced_OpenGL\module_3_blending\blending_shader.frag" />
+    <None Include="modules\Advanced_OpenGL\module_3_blending\blending_shader.vert" />
+    <None Include="modules\Advanced_OpenGL\module_3_blending\shaderSingleColor.frag" />
     <None Include="modules\Getting_Started\module_2_hello_triangle\hello_triangle_shader.frag" />
     <None Include="modules\Getting_Started\module_2_hello_triangle\hello_triangle_shader.vert" />
     <None Include="modules\Getting_Started\module_3_shaders\shaders_shader.frag" />
