--- a/OpenGL_Practice/shader_practice/shader_practice.vcxproj.filters
+++ b/OpenGL_Practice/shader_practice/shader_practice.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClCompile Include="modules\Advanced_OpenGL\module_3_blending\module_3_blending.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="modules\Advanced_OpenGL\module_4_face_culling\module_4_face_culling.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image.h">
@@ -228,5 +231,8 @@
     <None Include="modules\Advanced_OpenGL\module_3_blending\blending_shader.frag" />
     <None Include="modules\Advanced_OpenGL\module_3_blending\blending_shader.vert" />
     <None Include="modules\Advanced_OpenGL\module_3_blending\shaderSingleColor.frag" />
+    <None Include="modules\Advanced_OpenGL\module_4_face_culling\face_culling_shader.frag" />
+    <None Include="modules\Advanced_OpenGL\module_4_face_culling\face_culling_shader.vert" />
+    <None Include="modules\Advanced_OpenGL\module_4_face_culling\shaderSingleColor.frag" />
   </ItemGroup>
 </Project>
