--- a/OpenGL_Practice/shader_practice/shader_practice.vcxproj
+++ b/OpenGL_Practice/shader_practice/shader_practice.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="modules\Advanced_OpenGL\module_4_face_culling\module_4_face_culling.cpp" />
     <ClCompile Include="modules\Advanced_OpenGL\module_5_framebuffers\module_5_framebuffers.cpp" />
     <ClCompile Include="modules\Advanced_OpenGL\module_6_cubemaps\module_6_cubemaps.cpp" />
+    <ClCompile Include="modules\Advanced_OpenGL\module_7_Advanced_GLSL\module_7_advanced_glsl.cpp" />
     <ClCompile Include="modules\Getting_Started\module_1_hello_window\module_1_hello_window.cpp" />
     <ClCompile Include="modules\Getting_Started\module_2_hello_triangle\module_2_hello_triangle.cpp" />
     <ClCompile Include="modules\Getting_Started\module_3_shaders\module_3_shaders.cpp" />
@@ -196,6 +197,11 @@
     <None Include="modules\Advanced_OpenGL\module_6_cubemaps\framebuffers_shader.frag" />
     <None Include="modules\Advanced_OpenGL\module_6_cubemaps\framebuffers_shader.vert" />
     <None Include="modules\Advanced_OpenGL\module_6_cubemaps\shaderSingleColor.frag" />
+    <None Include="modules\Advanced_OpenGL\module_7_Advanced_GLSL\advanced_glsl_shader.frag" />
+    <None Include="modules\Advanced_OpenGL\module_7_Advanced_GLSL\advanced_glsl_shader.vert" />
+    <None Include="modules\Advanced_OpenGL\module_7_Advanced_GLSL\cubemaps_skybox_shader.frag" />
+    <None Include="modules\Advanced_OpenGL\module_7_Advanced_GLSL\cubemaps_skybox_shader.vert" />
+    <None Include="modules\Advanced_OpenGL\module_7_Advanced_GLSL\shaderSingleColor.frag" />
     <None Include="modules\Getting_Started\module_2_hello_triangle\hello_triangle_shader.frag" />
     <None Include="modules\Getting_Started\module_2_hello_triangle\hello_triangle_shader.vert" />
     <None Include="modules\Getting_Started\module_3_shaders\shaders_shader.frag" />
